ProjectManagement: Search and Project Creation fixed.